# lettuceremind

./: README.md  pyproject.toml
lettuceremind/: __init__.py  __main__.py  auth.py  cli.py  deals.py  models.py  paths.py  reminders.py  shelf_life.py  store.py
lettuceremind/receipt/: __init__.py  matcher.py  normalize.py  parser.py  scanner.py
lettuceremind/web/: __init__.py  recognize.py  server.py
lettuceremind/web/static/: app.html
tests/: test_accuracy.py  test_auth.py  test_cli.py  test_deals.py  test_matcher.py  test_normalize.py  test_parser.py  test_scanner.py  test_store_and_reminders.py  test_web.py
tests/fixtures/: kroger.txt  walmart.txt
